Added the PlaceholderAPI

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,1 +1,8 @@
 config_version: 1
+
+tags:
+  coolguy:
+    name: Cool Guy
+    permission: simpletags.coolguy
+    tag: '&b[&fCool Guy&b]'
+    lore: '&7This guy is cool.'
